Added Foxdox Gateway for Docs & General
