# storage/api-docs/api-docs.json
@@ -17,6 +17,14 @@
         {
             "name": "ProviderChat",
             "description": "Everything about the ProviderChat - Please make sure to be calling this as a Foxdox Provider"
+        },
+        {
+            "name": "Foxdox-API-Client",
+            "description": "Gateway to Foxdox-Client-API - Please make sure to be calling this as a Foxdox User"
+        },
+        {
+            "name": "Foxdox-API-Provider",
+            "description": "Gateway to Foxdox-Provider-API - Please make sure to be calling this as a Foxdox Provider"
         }
     ],
     "paths": {
@@ -1228,6 +1236,58 @@
                     "400": {
                         "description": "Messageid not valid."
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/unauthorizedError"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/foxdoxapi/user/listproviders": {
+            "get": {
+                "tags": [
+                    "Foxdox-API-Client"
+                ],
+                "summary": "For detailed description please take a look to the Foxdox API Documentation.",
+                "responses": {
+                    "200": {},
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/unauthorizedError"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/foxdoxapi/user/listalldocs": {
+            "get": {
+                "tags": [
+                    "Foxdox-API-Client"
+                ],
+                "summary": "For detailed description please take a look to the Foxdox API Documentation.",
+                "responses": {
+                    "200": {},
                     "401": {
                         "description": "Unauthorized",
                         "content": {
